# kubortex

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-bake.hcl  pyproject.toml
helm/kubortex/: Chart.yaml  values.yaml
helm/kubortex/crds/: actionexecution.yaml  approvalrequest.yaml  autonomyprofile.yaml  incident.yaml  investigation.yaml  remediationplan.yaml
helm/kubortex/templates/: NOTES.txt  _helpers.tpl  pvcs.yaml  secrets.yaml
helm/kubortex/templates/deployments/: edge.yaml  investigator.yaml  operator.yaml  remediator.yaml
helm/kubortex/templates/networkpolicies/: networkpolicies.yaml
helm/kubortex/templates/rbac/: edge.yaml  investigator.yaml  operator.yaml  remediator.yaml
runbooks/: OOM_KILL.md
skills/deploy-history/: SKILL.md
skills/deploy_history/src/: deploy_history.py
skills/kube-query/: SKILL.md
skills/kube_query/src/: kube_query.py
skills/log-search/src/: log_search.py
skills/log_search/: SKILL.md
skills/log_search/src/: log_search.py
skills/promql/: SKILL.md
skills/promql/src/: promql.py
src/kubortex/edge/: main.py
src/kubortex/edge/core/: __init__.py  correlator.py  events.py  ingester.py  projector.py  resolver.py  router.py
src/kubortex/edge/notifications/: events.py  projector.py  router.py  slack.py
src/kubortex/edge/signals/: alertmanager.py  correlator.py  ingester.py  normaliser.py
src/kubortex/investigator/: _frontmatter.py  main.py  worker.py
src/kubortex/investigator/context/: assembler.py  budget.py  compression.py
src/kubortex/investigator/graph/: builder.py  nodes.py  prompts.py  state.py
src/kubortex/investigator/learning/: feedback.py  scorer.py  store.py
src/kubortex/investigator/payload/: store.py
src/kubortex/investigator/prompts/: CONCLUDE_PROMPT.md  SYSTEM_PROMPT.md  __init__.py
src/kubortex/investigator/runbooks/: matcher.py  models.py  registry.py
src/kubortex/investigator/skills/: base.py  gateway.py  models.py  registry.py
src/kubortex/operator/: budget.py  main.py  policy.py  settings.py
src/kubortex/operator/handlers/: __init__.py  action.py  action_execution.py  approval.py  autonomy.py  incident.py  investigation.py  remediation.py
src/kubortex/remediator/: main.py  worker.py
src/kubortex/remediator/actions/: base.py  cordon_node.py  drain_node.py  (+4 more)
src/kubortex/shared/: config.py  constants.py  crds.py  k8s.py  kube_clients.py  logging.py  metrics.py  types.py
tests/unit/edge/: conftest.py  test_main.py
tests/unit/investigator/: test_gateway.py  test_registry.py
tests/unit/operator/: conftest.py  test_budget.py  test_main.py  test_policy.py
tests/unit/shared/: __init__.py  test_crds.py  test_kube_clients.py
(+29 files in other folders)
